k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-service
  labels:
    app: heart-disease
spec:
  type: NodePort
  selector:
    app: heart-disease
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
      nodePort: 30007
  # For cloud deployment, change type to LoadBalancer:
  # type: LoadBalancer
  # Remove nodePort line when using LoadBalancer
